--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             formData.timestamp = timestamp;
 
-            const response = await fetch('YOUR_WEB_APP_URL', {
+            const response = await fetch('https://script.google.com/macros/s/AKfycbzSXnlBnRaCmXV6dbrEThDkn9DjCofYS7_jcVmmNHkiUR4l7Fb6JR60T5zECFCLhCictA/exec', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
