--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
                 body: JSON.stringify(formData)
             });
 
-            const result = await response.json();
-            document.getElementById('result').innerText = result.message;
+            if (response.ok) {
+                const result = await response.json();
+                document.getElementById('result').innerText = result.message;
+            } else {
+                document.getElementById('result').innerText = 'Error submitting data.';
+            }
         }
     </script>
 </body>
