--- a/index.html
+++ b/index.html
@@ -108,18 +108,26 @@
 
             formData.timestamp = timestamp;
 
-            const response = await fetch('https://script.google.com/macros/s/AKfycbzSXnlBnRaCmXV6dbrEThDkn9DjCofYS7_jcVmmNHkiUR4l7Fb6JR60T5zECFCLhCictA/exec', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            });
+            try {
+                console.log('Submitting data:', formData);
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzSXnlBnRaCmXV6dbrEThDkn9DjCofYS7_jcVmmNHkiUR4l7Fb6JR60T5zECFCLhCictA/exec', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
 
-            if (response.ok) {
-                const result = await response.json();
-                document.getElementById('result').innerText = result.message;
-            } else {
+                if (response.ok) {
+                    const result = await response.json();
+                    console.log('Response:', result);
+                    document.getElementById('result').innerText = result.message;
+                } else {
+                    console.error('Error response:', response);
+                    document.getElementById('result').innerText = 'Error submitting data.';
+                }
+            } catch (error) {
+                console.error('Error:', error);
                 document.getElementById('result').innerText = 'Error submitting data.';
             }
         }
