--- a/index.html
+++ b/index.html
@@ -102,35 +102,4 @@
             const month = String(now.getMonth() + 1).padStart(2, '0');
             const day = String(now.getDate()).padStart(2, '0');
             const hour = String(now.getHours()).padStart(2, '0');
-            const minute = String(now.getMinutes()).padStart(2, '0');
-            const second = String(now.getSeconds()).padStart(2, '0');
-            const timestamp = `${year}${month}${day}${hour}${minute}${second}`;
-
-            formData.timestamp = timestamp;
-
-            try {
-                console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbwkL-4W1xq2CBiC0WDvcfI_2poIQua00BIZzogObQK_nrtvyCYyAjyp6ZFmxx7ZWxvJ3w/exec', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(formData)
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    console.log('Response:', result);
-                    document.getElementById('result').innerText = result.message;
-                } else {
-                    console.error('Error response:', response);
-                    document.getElementById('result').innerText = 'Error submitting data.';
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('result').innerText = 'Error submitting data.';
-            }
-        }
-    </script>
-</body>
-</html>
+            const minute = String(now.getMinutes()).pa
