--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
 
             try {
                 console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbxS_gp2_bR0r3f6jLp0jhOA0yPCt-56Z1uH4oaiZGqaiu2H4Q0ggmqpghOn1u3Vq3-q1Q/exec', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxOp5bkRy80RHfL-x8BaZ8KE7OpfYtl4hLj05vAdjR-i1qckzNxhaA2aC0IOmFHf1aIbw/exec', {
+                    redirect: 'follow',
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'text/plain;charset=utf-8',
                     },
                     body: JSON.stringify(formData)
                 });
