--- a/index.html
+++ b/index.html
@@ -54,11 +54,25 @@
             border-radius: 4px;
             text-align: center;
         }
+        .button-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .button-group button {
+            margin: 10px 0;
+        }
     </style>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
 </head>
 <body>
     <div class="container">
         <h1>FCS Game Journal</h1>
+        <div class="button-group">
+            <button id="login-button">Login with Google</button>
+            <button id="logout-button" style="display: none;">Logout</button>
+        </div>
         <form id="journalForm">
             <label for="bankroll">Initial Bankroll ($):</label>
             <input type="number" id="bankroll" name="bankroll" required>
@@ -84,8 +98,75 @@
             <button type="button" onclick="submitData()">Submit Data</button>
         </form>
         <div id="result"></div>
+        <div id="content"></div>
     </div>
     <script>
+        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
+
+        function handleCredentialResponse(response) {
+            const token = response.credential;
+            localStorage.setItem('google_token', token);
+            document.getElementById('login-button').style.display = 'none';
+            document.getElementById('logout-button').style.display = 'block';
+            initializeGapiClient();
+        }
+
+        function initializeGapiClient() {
+            gapi.load('client:auth2', () => {
+                gapi.client.init({
+                    clientId: CLIENT_ID,
+                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
+                }).then(() => {
+                    listFiles();
+                });
+            });
+        }
+
+        function listFiles() {
+            gapi.client.drive.files.list({
+                'pageSize': 10,
+                'fields': "nextPageToken, files(id, name)"
+            }).then(function(response) {
+                const files = response.result.files;
+                if (files && files.length > 0) {
+                    let output = '<ul>';
+                    files.forEach(file => {
+                        output += `<li>${file.name}</li>`;
+                    });
+                    output += '</ul>';
+                    document.getElementById('content').innerHTML = output;
+                } else {
+                    document.getElementById('content').innerHTML = 'No files found.';
+                }
+            });
+        }
+
+        function handleSignoutClick() {
+            localStorage.removeItem('google_token');
+            document.getElementById('login-button').style.display = 'block';
+            document.getElementById('logout-button').style.display = 'none';
+            document.getElementById('content').innerHTML = '';
+        }
+
+        window.onload = function () {
+            google.accounts.id.initialize({
+                client_id: CLIENT_ID,
+                callback: handleCredentialResponse
+            });
+            google.accounts.id.renderButton(
+                document.getElementById('login-button'),
+                { theme: 'outline', size: 'large' }
+            );
+            document.getElementById('logout-button').onclick = handleSignoutClick;
+
+            const token = localStorage.getItem('google_token');
+            if (token) {
+                document.getElementById('login-button').style.display = 'none';
+                document.getElementById('logout-button').style.display = 'block';
+                initializeGapiClient();
+            }
+        }
+
         async function submitData() {
             const formData = {
                 bankroll: document.getElementById('bankroll').value,
