--- a/index.html
+++ b/index.html
@@ -35,25 +35,6 @@
             border: 1px solid #ddd;
             border-radius: 4px;
         }
-        button {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #result {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f1f1f1;
-            border-radius: 4px;
-            text-align: center;
-        }
         .button-group {
             display: flex;
             flex-direction: column;
@@ -61,6 +42,13 @@
         }
         .button-group button {
             margin: 10px 0;
+        }
+        #result {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-radius: 4px;
+            text-align: center;
         }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -117,7 +105,9 @@
                     clientId: CLIENT_ID,
                     scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
                 }).then(() => {
-                    listFiles();
+                    gapi.auth2.getAuthInstance().signIn().then(() => {
+                        listFiles();
+                    });
                 });
             });
         }
@@ -142,10 +132,12 @@
         }
 
         function handleSignoutClick() {
-            localStorage.removeItem('google_token');
-            document.getElementById('login-button').style.display = 'block';
-            document.getElementById('logout-button').style.display = 'none';
-            document.getElementById('content').innerHTML = '';
+            gapi.auth2.getAuthInstance().signOut().then(() => {
+                localStorage.removeItem('google_token');
+                document.getElementById('login-button').style.display = 'block';
+                document.getElementById('logout-button').style.display = 'none';
+                document.getElementById('content').innerHTML = '';
+            });
         }
 
         window.onload = function () {
