--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
             border-radius: 4px;
             text-align: center;
         }
+        #login-button, #logout-button {
+            margin: 20px 0;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        #login-button:hover, #logout-button:hover {
+            background-color: #0056b3;
+        }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
