--- a/index.html
+++ b/index.html
@@ -101,127 +101,4 @@
         <div id="content"></div>
     </div>
     <script>
-        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
-
-        function handleCredentialResponse(response) {
-            const token = response.credential;
-            localStorage.setItem('google_token', token);
-            document.getElementById('login-button').style.display = 'none';
-            document.getElementById('logout-button').style.display = 'block';
-            initializeGapiClient();
-        }
-
-        function initializeGapiClient() {
-            gapi.load('client:auth2', () => {
-                gapi.client.init({
-                    clientId: CLIENT_ID,
-                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
-                }).then(() => {
-                    const authInstance = gapi.auth2.getAuthInstance();
-                    if (authInstance.isSignedIn.get()) {
-                        listFiles();
-                    } else {
-                        authInstance.signIn().then(() => {
-                            listFiles();
-                        });
-                    }
-                });
-            });
-        }
-
-        function listFiles() {
-            gapi.client.drive.files.list({
-                'pageSize': 10,
-                'fields': "nextPageToken, files(id, name)"
-            }).then(function(response) {
-                const files = response.result.files;
-                if (files && files.length > 0) {
-                    let output = '<ul>';
-                    files.forEach(file => {
-                        output += `<li>${file.name}</li>`;
-                    });
-                    output += '</ul>';
-                    document.getElementById('content').innerHTML = output;
-                } else {
-                    document.getElementById('content').innerHTML = 'No files found.';
-                }
-            });
-        }
-
-        function handleSignoutClick() {
-            gapi.auth2.getAuthInstance().signOut().then(() => {
-                localStorage.removeItem('google_token');
-                document.getElementById('login-button').style.display = 'block';
-                document.getElementById('logout-button').style.display = 'none';
-                document.getElementById('content').innerHTML = '';
-            });
-        }
-
-        window.onload = function () {
-            google.accounts.id.initialize({
-                client_id: CLIENT_ID,
-                callback: handleCredentialResponse
-            });
-            google.accounts.id.renderButton(
-                document.getElementById('login-button'),
-                { theme: 'outline', size: 'large' }
-            );
-            document.getElementById('logout-button').onclick = handleSignoutClick;
-
-            const token = localStorage.getItem('google_token');
-            if (token) {
-                document.getElementById('login-button').style.display = 'none';
-                document.getElementById('logout-button').style.display = 'block';
-                initializeGapiClient();
-            }
-        }
-
-        async function submitData() {
-            const formData = {
-                bankroll: document.getElementById('bankroll').value,
-                max_loss: document.getElementById('max_loss').value,
-                take_profit: document.getElementById('take_profit').value,
-                rounds_played: document.getElementById('rounds_played').value,
-                final_bankroll: document.getElementById('final_bankroll').value,
-                strategy: document.getElementById('strategy').value,
-                improvement: document.getElementById('improvement').value,
-            };
-
-            const now = new Date();
-            const year = String(now.getFullYear()).slice(2);
-            const month = String(now.getMonth() + 1).padStart(2, '0');
-            const day = String(now.getDate()).padStart(2, '0');
-            const hour = String(now.getHours()).padStart(2, '0');
-            const minute = String(now.getMinutes()).padStart(2, '0');
-            const second = String(now.getSeconds()).padStart(2, '0');
-            const timestamp = `${year}${month}${day}${hour}${minute}${second}`;
-
-            formData.timestamp = timestamp;
-
-            try {
-                console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbxOp5bkRy80RHfL-x8BaZ8KE7OpfYtl4hLj05vAdjR-i1qckzNxhaA2aC0IOmFHf1aIbw/exec', {
-                    redirect: 'follow',
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'text/plain;charset=utf-8',
-                    },
-                    body: JSON.stringify(formData)
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    console.log('Response:', result);
-                    document.getElementById('result').innerText = result.message;
-                } else {
-                    console.error('Error response:', response);
-                    document.getElementById('result').innerText = 'Error submitting data.';
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('result').innerText = 'Error submitting data.';
-            }
-        }
-    </script>
-</body>
-</html>
+        const CLIENT_ID = '8
