--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
             border: 1px solid #ddd;
             border-radius: 4px;
         }
-        .button-group {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        button {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
-        .button-group button {
-            margin: 10px 0;
+        button:hover {
+            background-color: #0056b3;
         }
         #result {
             margin-top: 20px;
@@ -50,33 +54,23 @@
             border-radius: 4px;
             text-align: center;
         }
-        #login-button, #logout-button {
-            margin: 20px 0;
-            padding: 10px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+        .button-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-        #login-button:hover, #logout-button:hover {
-            background-color: #0056b3;
+        .button-group button {
+            margin: 10px 0;
         }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
 </head>
 <body>
     <div class="container">
         <h1>FCS Game Journal</h1>
         <div class="button-group">
-            <div id="g_id_onload"
-                data-client_id="YOUR_CLIENT_ID"
-                data-context="signin"
-                data-ux_mode="popup"
-                data-callback="handleCredentialResponse"
-                data-auto_prompt="false">
-            </div>
-            <div class="g_id_signin" data-type="standard"></div>
+            <button id="login-button">Login with Google</button>
             <button id="logout-button" style="display: none;">Logout</button>
         </div>
         <form id="journalForm">
@@ -107,26 +101,23 @@
         <div id="content"></div>
     </div>
     <script>
-        const CLIENT_ID = 'YOUR_CLIENT_ID'; // Replace with your client ID
+        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
 
         function handleCredentialResponse(response) {
             const token = response.credential;
             localStorage.setItem('google_token', token);
             document.getElementById('login-button').style.display = 'none';
             document.getElementById('logout-button').style.display = 'block';
-            initializeGapiClient(token);
+            initializeGapiClient();
         }
 
-        function initializeGapiClient(token) {
-            gapi.load('client', () => {
+        function initializeGapiClient() {
+            gapi.load('client:auth2', () => {
                 gapi.client.init({
-                    'apiKey': 'YOUR_API_KEY', // Replace with your API key
-                    'discoveryDocs': ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'],
+                    clientId: CLIENT_ID,
+                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
                 }).then(() => {
-                    gapi.client.setToken({ access_token: token });
                     listFiles();
-                }).catch(error => {
-                    console.error('Error initializing GAPI client:', error);
                 });
             });
         }
@@ -147,8 +138,6 @@
                 } else {
                     document.getElementById('content').innerHTML = 'No files found.';
                 }
-            }).catch(error => {
-                console.error('Error listing files:', error);
             });
         }
 
@@ -157,17 +146,24 @@
             document.getElementById('login-button').style.display = 'block';
             document.getElementById('logout-button').style.display = 'none';
             document.getElementById('content').innerHTML = '';
-            window.location.reload();
         }
 
         window.onload = function () {
+            google.accounts.id.initialize({
+                client_id: CLIENT_ID,
+                callback: handleCredentialResponse
+            });
+            google.accounts.id.renderButton(
+                document.getElementById('login-button'),
+                { theme: 'outline', size: 'large' }
+            );
             document.getElementById('logout-button').onclick = handleSignoutClick;
 
             const token = localStorage.getItem('google_token');
             if (token) {
                 document.getElementById('login-button').style.display = 'none';
                 document.getElementById('logout-button').style.display = 'block';
-                initializeGapiClient(token);
+                initializeGapiClient();
             }
         }
 
@@ -179,7 +175,7 @@
                 rounds_played: document.getElementById('rounds_played').value,
                 final_bankroll: document.getElementById('final_bankroll').value,
                 strategy: document.getElementById('strategy').value,
-                improvement: document.getElementById('improvement').value,
+                improvement: document.getElementById('improvement').value
             };
 
             const now = new Date();
