--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div id="content"></div>
     </div>
     <script>
-        const CLIENT_ID = 'YOUR_CLIENT_ID'; // Replace with your client ID
+        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
 
         function handleCredentialResponse(response) {
             const token = response.credential;
