--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js" async defer></script>
 </head>
 <body>
     <div class="container">
@@ -109,22 +108,24 @@
     </div>
     <script>
         const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
+        let tokenClient;
+        let accessToken = null;
 
         function handleCredentialResponse(response) {
-            const token = response.credential;
-            localStorage.setItem('google_token', token);
+            accessToken = response.credential;
+            localStorage.setItem('google_token', accessToken);
             document.getElementById('g_id_signin').style.display = 'none';
             document.getElementById('logout-button').style.display = 'block';
-            initializeGapiClient(token);
+            initializeGapiClient();
         }
 
-        function initializeGapiClient(token) {
-            gapi.load('client:auth2', () => {
-                gapi.auth2.init({
-                    client_id: CLIENT_ID,
-                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
+        function initializeGapiClient() {
+            gapi.load('client', () => {
+                gapi.client.init({
+                    apiKey: 'YOUR_API_KEY', // Replace with your API key
+                    discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'],
                 }).then(() => {
-                    gapi.client.setToken({ access_token: token });
+                    gapi.client.setToken({ access_token: accessToken });
                     listFiles();
                 }).catch(error => {
                     console.error('Error initializing GAPI client:', error);
@@ -159,6 +160,7 @@
             document.getElementById('g_id_signin').style.display = 'block';
             document.getElementById('logout-button').style.display = 'none';
             document.getElementById('content').innerHTML = '';
+            accessToken = null;
             window.location.reload();
         }
 
@@ -176,9 +178,10 @@
 
             const token = localStorage.getItem('google_token');
             if (token) {
+                accessToken = token;
                 document.getElementById('g_id_signin').style.display = 'none';
                 document.getElementById('logout-button').style.display = 'block';
-                initializeGapiClient(token);
+                initializeGapiClient();
             }
         }
 
