--- a/index.html
+++ b/index.html
@@ -115,30 +115,37 @@
             localStorage.setItem('google_token', accessToken);
             document.getElementById('g_id_signin').style.display = 'none';
             document.getElementById('logout-button').style.display = 'block';
-            listFiles();
+            initializeGapiClient();
+        }
+
+        function initializeGapiClient() {
+            gapi.load('client:auth2', () => {
+                gapi.client.init({
+                    clientId: CLIENT_ID,
+                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
+                }).then(() => {
+                    listFiles();
+                });
+            });
         }
 
         function listFiles() {
-            fetch('https://www.googleapis.com/drive/v3/files?pageSize=10&fields=nextPageToken,files(id,name)', {
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken
+            gapi.client.drive.files.list({
+                'pageSize': 10,
+                'fields': "nextPageToken, files(id, name)"
+            }).then(function(response) {
+                const files = response.result.files;
+                if (files && files.length > 0) {
+                    let output = '<ul>';
+                    files.forEach(file => {
+                        output += `<li>${file.name}</li>`;
+                    });
+                    output += '</ul>';
+                    document.getElementById('content').innerHTML = output;
+                } else {
+                    document.getElementById('content').innerHTML = 'No files found.';
                 }
-            }).then(response => response.json())
-              .then(data => {
-                  if (data.files && data.files.length > 0) {
-                      let output = '<ul>';
-                      data.files.forEach(file => {
-                          output += `<li>${file.name}</li>`;
-                      });
-                      output += '</ul>';
-                      document.getElementById('content').innerHTML = output;
-                  } else {
-                      document.getElementById('content').innerHTML = 'No files found.';
-                  }
-              }).catch(error => {
-                  console.error('Error listing files:', error);
-                  document.getElementById('content').innerHTML = 'Error listing files.';
-              });
+            });
         }
 
         function handleSignoutClick() {
@@ -186,7 +193,7 @@
 
             try {
                 console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbxOp5bkRy80RHfL-x8BaZ8KE7OpfYtl4hLj05vAdjR-i1qckzNxhaA2aC0IOmFHf1aIbw/exec', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbygvHlzCU7_LjwKI_GuUd_Jbo8YYtmV64zrue0LtWVCKrsdEjl_G-hJehphkrVycixsuA/exec', {
                     redirect: 'follow',
                     method: 'POST',
                     headers: {
