--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         .button-group button {
             margin: 10px 0;
         }
+        .hidden {
+            display: none;
+        }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
@@ -77,9 +80,14 @@
                 data-auto_prompt="false">
             </div>
             <div id="g_id_signin"></div>
-            <button id="logout-button" style="display: none;">Logout</button>
+            <button id="logout-button" class="hidden">Logout</button>
         </div>
-        <form id="journalForm">
+        <div id="scriptUrlPrompt" class="hidden">
+            <label for="scriptUrl">Enter your Google Apps Script URL:</label>
+            <input type="text" id="scriptUrl" placeholder="https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec" required>
+            <button type="button" onclick="saveScriptUrl()">Save URL</button>
+        </div>
+        <form id="journalForm" class="hidden">
             <label for="bankroll">Initial Bankroll ($):</label>
             <input type="number" id="bankroll" name="bankroll" required>
 
@@ -104,65 +112,48 @@
             <button type="button" onclick="submitData()">Submit Data</button>
         </form>
         <div id="result"></div>
-        <div id="content"></div>
     </div>
     <script>
         const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
-        let accessToken = null;
 
         function handleCredentialResponse(response) {
-            accessToken = response.credential;
-            localStorage.setItem('google_token', accessToken);
+            const token = response.credential;
+            localStorage.setItem('google_token', token);
             document.getElementById('g_id_signin').style.display = 'none';
-            document.getElementById('logout-button').style.display = 'block';
-            initializeGapiClient();
-        }
-
-        function initializeGapiClient() {
-            gapi.load('client:auth2', () => {
-                gapi.client.init({
-                    clientId: CLIENT_ID,
-                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
-                }).then(() => {
-                    listFiles();
-                });
-            });
-        }
-
-        function listFiles() {
-            gapi.client.drive.files.list({
-                'pageSize': 10,
-                'fields': "nextPageToken, files(id, name)"
-            }).then(function(response) {
-                const files = response.result.files;
-                if (files && files.length > 0) {
-                    let output = '<ul>';
-                    files.forEach(file => {
-                        output += `<li>${file.name}</li>`;
-                    });
-                    output += '</ul>';
-                    document.getElementById('content').innerHTML = output;
-                } else {
-                    document.getElementById('content').innerHTML = 'No files found.';
-                }
-            });
+            document.getElementById('logout-button').classList.remove('hidden');
+            checkForScriptUrl();
         }
 
         function handleSignoutClick() {
             google.accounts.id.disableAutoSelect();
             localStorage.removeItem('google_token');
+            localStorage.removeItem('script_url');
             document.getElementById('g_id_signin').style.display = 'block';
-            document.getElementById('logout-button').style.display = 'none';
-            document.getElementById('content').innerHTML = '';
-            accessToken = null;
-            window.location.reload();
+            document.getElementById('logout-button').classList.add('hidden');
+            document.getElementById('journalForm').classList.add('hidden');
+            document.getElementById('scriptUrlPrompt').classList.add('hidden');
+        }
+
+        function checkForScriptUrl() {
+            const scriptUrl = localStorage.getItem('script_url');
+            if (scriptUrl) {
+                document.getElementById('journalForm').classList.remove('hidden');
+            } else {
+                document.getElementById('scriptUrlPrompt').classList.remove('hidden');
+            }
+        }
+
+        function saveScriptUrl() {
+            const scriptUrl = document.getElementById('scriptUrl').value;
+            localStorage.setItem('script_url', scriptUrl);
+            document.getElementById('scriptUrlPrompt').classList.add('hidden');
+            document.getElementById('journalForm').classList.remove('hidden');
         }
 
         window.onload = function () {
             google.accounts.id.initialize({
                 client_id: CLIENT_ID,
-                callback: handleCredentialResponse,
-                auto_select: false
+                callback: handleCredentialResponse
             });
             google.accounts.id.renderButton(
                 document.getElementById('g_id_signin'),
@@ -172,14 +163,14 @@
 
             const token = localStorage.getItem('google_token');
             if (token) {
-                accessToken = token;
                 document.getElementById('g_id_signin').style.display = 'none';
-                document.getElementById('logout-button').style.display = 'block';
-                listFiles();
+                document.getElementById('logout-button').classList.remove('hidden');
+                checkForScriptUrl();
             }
         }
 
         async function submitData() {
+            const scriptUrl = localStorage.getItem('script_url');
             const formData = {
                 bankroll: document.getElementById('bankroll').value,
                 max_loss: document.getElementById('max_loss').value,
@@ -187,13 +178,23 @@
                 rounds_played: document.getElementById('rounds_played').value,
                 final_bankroll: document.getElementById('final_bankroll').value,
                 strategy: document.getElementById('strategy').value,
-                improvement: document.getElementById('improvement').value,
-                timestamp: new Date().toISOString(),
+                improvement: document.getElementById('improvement').value
             };
+
+            const now = new Date();
+            const year = String(now.getFullYear()).slice(2);
+            const month = String(now.getMonth() + 1).padStart(2, '0');
+            const day = String(now.getDate()).padStart(2, '0');
+            const hour = String(now.getHours()).padStart(2, '0');
+            const minute = String(now.getMinutes()).padStart(2, '0');
+            const second = String(now.getSeconds()).padStart(2, '0');
+            const timestamp = `${year}${month}${day}${hour}${minute}${second}`;
+
+            formData.timestamp = timestamp;
 
             try {
                 console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzKU7mkvDRVbdnX1TTXIflqhWPGSn9am6tDhv4lANSH_wV24_K-sDiLW12hnMoYQAgPZQ/exec', {
+                const response = await fetch(scriptUrl, {
                     redirect: 'follow',
                     method: 'POST',
                     headers: {
